[package]
name = "id-manager"
version = "0.0.1" # https://crates.io/crates/id-manager
edition = "2021"
rust-version = "1.62"
publish = true
description = "Rust Id manager"
repository = "https://github.com/gyuho/id-manager"
readme = "README.md"
license = "Apache-2.0"

[dependencies]
bs58 = "0.4.0"
chrono = "0.4.19"
random-manager = "0.0.1"
ripemd = "0.1.1"
whoami = "1.2.1"

[dev-dependencies]
env_logger = "0.9.0"
log = "0.4.17"
