[package]
name = "id-manager"
version = "0.0.3" # https://crates.io/crates/id-manager
edition = "2021"
rust-version = "1.67"
publish = true
description = "Rust Id manager"
repository = "https://github.com/gyuho/id-manager"
readme = "README.md"
license = "Apache-2.0"

[dependencies]
bs58 = "0.4.0"
chrono = "0.4.23"
random-manager = "0.0.5"
ripemd = "0.1.3"
whoami = "1.3.0"

[dev-dependencies]
env_logger = "0.10.0"
log = "0.4.17"
